Added link to Pokemon Day Care

--- a/index.html
+++ b/index.html
@@ -74,11 +74,30 @@
                     <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
                             <div class="row no-gutters">
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://friend-finder-adiaz.herokuapp.com/"><img src="assets/images/Poke_Ball.png" class="card-img" alt="Pokémon Day Care"></a>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Pokémon Day Care</h5>
+                                        <p class="card-text">An app designed to match Pokémon deposited at the Day Care with their ideal friend!</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, Node.js, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/friend-finder-adiaz">GitHub Repository</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">Bamazon</h5>
                                         <p class="card-text">A simple CLI app using Node.js and MYSQL to create a fictional storefront similar to Amazon.</p>
-                                        <p class="card-text">Built with HTML, JavaScript/JQuery, MYSQL, and Node.js</p>
+                                        <p class="card-text">Built with HTML5, JavaScript/JQuery, MYSQL, and Node.js</p>
                                         <a id="githubLink" href="https://github.com/aramisdiaz/Bamazon">GitHub Repository</a>
                                     </div>
                                 </div>
@@ -117,7 +136,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Train Scheduler</h5>
                                         <p class="card-text">An exercise using firebase to output information on fictional train schedules based on user input.</p>
-                                        <p class="card-text">Built with HTML, CSS/Bootstrap, JavaScript/JQuery, and Firebase</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/JQuery, and Firebase</p>
                                         <a id="githubLink" href="https://github.com/aramisdiaz/Train-Scheduler">GitHub Repository</a>
                                     </div>
                                 </div>
