Added link to Burger Eater

--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
             <div id="projects-div" class="col-sm-12 content-div">
                 <h2 class="myH2">Projects</h2>
                 
+
+
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Burger Eater</h5>
+                                        <p class="card-text">A simple Heroku app using Node.js and MYSQL that allows you to create and eat burgers.</p>
+                                        <p class="card-text">Built with HTML5, JavaScript/JQuery, MYSQL, Node.js, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/burger">GitHub Repository</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://peaceful-bastion-42738.herokuapp.com/index" class="card-img" alt="Burger"><img src="./assets/images/burger.jpg" class="card-img"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
