Updated Portfolio for Homework Assignment

--- a/index.html
+++ b/index.html
@@ -71,7 +71,25 @@
                 <h2 class="myH2">Projects</h2>
                 
 
-
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://face-colosseum.herokuapp.com/index"><img src="assets/images/colosseum.jpg" class="card-img" alt="Pokémon Day Care"></a>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Colosseum</h5>
+                                        <p class="card-text">A browser based RPG that utilizes character building and type advantages to facilitate thrilling, strategic gameplay!</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, Node.js, Handlebars, MYSQL, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/Colosseum">GitHub Repository</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
