--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@
             <div id="projects-div" class="col-sm-12 content-div">
                 <h2 class="myH2">Projects</h2>
                 
-
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">DnD NewsScraper</h5>
+                                        <p class="card-text">A simple Heroku app using Node.js and MongoDB that allows you to scrape DnD monster tactics articles from a webpage.</p>
+                                        <p class="card-text">Built with HTML5, JavaScript/JQuery, MongoDB, Node.js, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/dnd-news-scraper">GitHub Repository</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://dnd-news-scraper.herokuapp.com/" class="card-img" alt="DnDNewsScraper"><img src="./assets/images/dndscrape.jpg" class="card-img"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
