Added ClickerTale and GoogleThoseBooks to portfolio

--- a/index.html
+++ b/index.html
@@ -76,6 +76,44 @@
                             <div class="row no-gutters">
                                 <div class="col-md-8">
                                     <div class="card-body">
+                                        <h5 class="card-title">GoogleThoseBooks</h5>
+                                        <p class="card-text">A simple Heroku app using Node.js and MongoDB that allows you to search for and save your favorite Google Books.</p>
+                                        <p class="card-text">Built with HTML5, JavaScript/JQuery, MongoDB, Node.js, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/google-those-books">GitHub Repository</a>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://google-those-books.herokuapp.com/" class="card-img" alt="GoogleThoseBooks"><img src="./assets/images/googlebooks.jpg" class="card-img" alt="GoogleThoseBooks"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
+                                <div class="col-md-4 hover-img">
+                                    <a href="https://aramisdiaz.github.io/ClickerTale/"><img src="assets/images/clickertale.png" class="card-img" alt="ClickerTale"></a>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">ClickerTale</h5>
+                                        <p class="card-text">A browser based memory game that utilizes React components for seamless design!</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, Node.js, and React</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/ClickerTale">GitHub Repository</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
+                        <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
+                            <div class="row no-gutters">
+                                <div class="col-md-8">
+                                    <div class="card-body">
                                         <h5 class="card-title">DnD NewsScraper</h5>
                                         <p class="card-text">A simple Heroku app using Node.js and MongoDB that allows you to scrape DnD monster tactics articles from a webpage.</p>
                                         <p class="card-text">Built with HTML5, JavaScript/JQuery, MongoDB, Node.js, and Heroku</p>
