--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="about-div" class="col-sm-12 col-md-12 col-lg-12 content-div">
                 <h2 class="myH2" data-aos="flip-up">About Me</h2>
                 <p class="myP" data-aos="flip-up">
-                    Hello there! My name is Aramis Diaz and I am a full-stack web developer. I live in Burbank, California and I have a bachelors degree in Cellular and Molecular Biology from the University of South Florida. I am currently enrolled in classes at UCLA Extension. I have a passion for learning new things and believe I'll never truly stop striving to acquire new knowledge.
+                    Hello there! My name is Aramis Diaz and I am a full-stack web developer. I live in Burbank, California and I have a bachelors degree in Cellular and Molecular Biology from the University of South Florida and a certification from UCLA Extension's Coding Boot Camp. I am currently seeking a role as a full-stack web developer. I have a passion for learning new things and believe I'll never truly stop striving to acquire new knowledge.
                 </p>
                 <p class="myP" data-aos="flip-up">
                     Some of my interests include video and tabletop gaming, as well as reading, writing, and cooking. I enjoy jogging, hiking, and boxing, as well as swimming and fishing. I love the great outdoors as much as I love delving deep into my projects behind a computer screen.
