--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     </nav>
 
     <section class="home">
+        <div id="intro">
+            <div class="namePlate" data-aos="fade-down" data-aos-duration="3000">
+                Hello, I'm Aramis Diaz.
+                <br>
+                I am a full-stack web developer.
+            </div>
+
+            <a class="navItem" href="#about-div" id="down-btn"><img alt="Click Me!" class="img-fluid grow"
+                    src="./assets/images/downArrow.png"></a>
+        </div>
     </section>
 
 
@@ -48,13 +58,19 @@
             <div id="about-div" class="col-sm-12 col-md-12 col-lg-12 content-div">
                 <h2 class="myH2" data-aos="flip-up">About Me</h2>
                 <p class="myP" data-aos="flip-up">
-                    Hello there! My name is Aramis Diaz and I am a full-stack web developer. I live in Burbank, California and I have a bachelors degree in Cellular and Molecular Biology from the University of South Florida and a certification from UCLA Extension's Coding Boot Camp. I am currently seeking a role as a full-stack web developer. I have a passion for learning new things and believe I'll never truly stop striving to acquire new knowledge.
+                    I live in Burbank, California and I have a bachelors degree in Cellular and Molecular Biology from the University of
+                    South Florida and a certification from UCLA Extension's Coding Boot Camp. I am currently seeking a
+                    role as a full-stack web developer. I have a passion for learning new things and believe I'll never
+                    truly stop striving to acquire new knowledge.
                 </p>
                 <p class="myP" data-aos="flip-up">
-                    Some of my interests include video and tabletop gaming, as well as reading, writing, and cooking. I enjoy jogging, hiking, and boxing, as well as swimming and fishing. I love the great outdoors as much as I love delving deep into my projects behind a computer screen.
+                    Some of my interests include video and tabletop gaming, as well as reading, writing, and cooking. I
+                    enjoy jogging, hiking, and boxing, as well as swimming and fishing. I love the great outdoors as
+                    much as I love delving deep into my projects behind a computer screen.
                 </p>
                 <p class="myP" data-aos="flip-up">
-                    It's always a joy to make new connections as I journey onward, and I would be happy to count you among them! If you would like to reach out, you can contact me using the information below.
+                    It's always a joy to make new connections as I journey onward, and I would be happy to count you
+                    among them! If you would like to reach out, you can contact me using the information below.
                 </p>
                 <p class="myC" data-aos="flip-up">
                     Phone: (813)-727-8321
@@ -69,23 +85,29 @@
         <div class="row">
             <div id="projects-div" class="col-sm-12 content-div">
                 <h2 class="myH2">Projects</h2>
-                
+
 
                 <div class="row">
                     <div class="col-md-8 offset-lg-2 offset-md-2" data-aos="flip-up">
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
                             <div class="row no-gutters">
                                 <div class="col-md-4 hover-img">
-                                    <a href="https://plenty-of-thyme.herokuapp.com/" target="_blank" rel= "noopener noreferrer" class="card-img" alt="PlentyOfThyme"><img src="./assets/images/thyme.jpg" class="card-img" alt="PlentyOfThyme"></a>
+                                    <a href="https://plenty-of-thyme.herokuapp.com/" target="_blank"
+                                        rel="noopener noreferrer" class="card-img" alt="PlentyOfThyme"><img
+                                            src="./assets/images/thyme.jpg" class="card-img" alt="PlentyOfThyme"></a>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">
-                                            <a href="https://plenty-of-thyme.herokuapp.com/" target="_blank" rel= "noopener noreferrer" class="card-img" alt="PlentyOfThyme">PlentyOfThyme</a>
+                                            <a href="https://plenty-of-thyme.herokuapp.com/" target="_blank"
+                                                rel="noopener noreferrer" class="card-img"
+                                                alt="PlentyOfThyme">PlentyOfThyme</a>
                                         </h5>
-                                        <p class="card-text">A full-stack Heroku app using React.js and MongoDB that allows you to search for and save ingredients from online recipes.</p>
+                                        <p class="card-text">A full-stack Heroku app using React.js and MongoDB that
+                                            allows you to search for and save ingredients from online recipes.</p>
                                         <p class="card-text">Built with React.js, MongoDB, Node.js, and Heroku</p>
-                                        <a id="githubLink" href="https://github.com/aramisdiaz/PlentyofThyme" target="_blank" rel= "noopener noreferrer">GitHub Repository</a>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/PlentyofThyme"
+                                            target="_blank" rel="noopener noreferrer">GitHub Repository</a>
                                     </div>
                                 </div>
                             </div>
@@ -98,16 +120,22 @@
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
                             <div class="row no-gutters">
                                 <div class="col-md-4 hover-img">
-                                    <a href="https://face-colosseum.herokuapp.com/index" target="_blank" rel= "noopener noreferrer"><img src="assets/images/colosseum.jpg" class="card-img" alt="Pokémon Day Care"></a>
+                                    <a href="https://face-colosseum.herokuapp.com/index" target="_blank"
+                                        rel="noopener noreferrer"><img src="assets/images/colosseum.jpg"
+                                            class="card-img" alt="Pokémon Day Care"></a>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">
-                                            <a href="https://face-colosseum.herokuapp.com/index" target="_blank" rel= "noopener noreferrer" class="card-img" alt="Colosseum">Colosseum</a>
+                                            <a href="https://face-colosseum.herokuapp.com/index" target="_blank"
+                                                rel="noopener noreferrer" class="card-img" alt="Colosseum">Colosseum</a>
                                         </h5>
-                                        <p class="card-text">A browser based RPG that utilizes character building and type advantages to facilitate thrilling, strategic gameplay!</p>
-                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, Node.js, Handlebars, MYSQL, and Heroku</p>
-                                        <a id="githubLink" href="https://github.com/aramisdiaz/Colosseum" target="_blank" rel= "noopener noreferrer">GitHub Repository</a>
+                                        <p class="card-text">A browser based RPG that utilizes character building and
+                                            type advantages to facilitate thrilling, strategic gameplay!</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery,
+                                            Node.js, Handlebars, MYSQL, and Heroku</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/Colosseum"
+                                            target="_blank" rel="noopener noreferrer">GitHub Repository</a>
                                     </div>
                                 </div>
                             </div>
@@ -120,16 +148,22 @@
                         <div class="card mb-3 text-white bg-dark mb-3 rounded-card">
                             <div class="row no-gutters">
                                 <div class="col-md-4 hover-img">
-                                    <a href="https://aramisdiaz.github.io/CoastIsClear/" target="_blank" rel= "noopener noreferrer"><img src="assets/images/water2.jpg" class="card-img" alt="Coast Is Clear"></a>
+                                    <a href="https://aramisdiaz.github.io/CoastIsClear/" target="_blank"
+                                        rel="noopener noreferrer"><img src="assets/images/water2.jpg" class="card-img"
+                                            alt="Coast Is Clear"></a>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <h5 class="card-title">
-                                            <a href="https://aramisdiaz.github.io/CoastIsClear/" target="_blank" rel= "noopener noreferrer">CoastIsClear</a>
+                                            <a href="https://aramisdiaz.github.io/CoastIsClear/" target="_blank"
+                                                rel="noopener noreferrer">CoastIsClear</a>
                                         </h5>
-                                        <p class="card-text">An app designed to help beachgoers know what the conditions are like in advance!</p>
-                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, and APIs</p>
-                                        <a id="githubLink" href="https://github.com/aramisdiaz/CoastIsClear" target="_blank" rel= "noopener noreferrer">GitHub Repository</a>
+                                        <p class="card-text">An app designed to help beachgoers know what the conditions
+                                            are like in advance!</p>
+                                        <p class="card-text">Built with HTML5, CSS/Bootstrap, JavaScript/jQuery, and
+                                            APIs</p>
+                                        <a id="githubLink" href="https://github.com/aramisdiaz/CoastIsClear"
+                                            target="_blank" rel="noopener noreferrer">GitHub Repository</a>
                                     </div>
                                 </div>
                             </div>
@@ -141,49 +175,58 @@
 
 
 
-        <div class="row">
-            <div id="connect-div" class="col-sm-12 col-md-12 col-lg-12 content-div">
-                <h2 id="connect-title" class="myH2">Connect</h2>
-
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns" data-aos="fade-right">
-                        <a href="https://github.com/aramisdiaz" target="_blank" rel= "noopener noreferrer"><img src="./assets/images/github.jpg" alt="GithubADiaz2020" class="img-fluid grow"></a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns" data-aos="zoom-in">
-                        <a href="https://www.linkedin.com/in/aramis-diaz-b886aa60/" target="_blank" rel= "noopener noreferrer"><img src="./assets/images/linkedin.png" alt="LinkedInADiaz2020" class="img-fluid grow"></a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns" data-aos="fade-left">
-                        <a href="https://drive.google.com/file/d/1vR9TnRo3No8tZ_oKNMgoURM1LY-EDpyI/view?usp=sharing" target="_blank" rel= "noopener noreferrer"><img src="./assets/images/resume.png" alt="ResumeADiaz2020" class="img-fluid grow"></a>
+                    <div id="connect-div" class="col-sm-12 col-md-12 col-lg-12 content-div">
+                        <h2 id="connect-title" class="myH2">Connect</h2>
 
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns"
+                                data-aos="fade-right">
+                                <a href="https://github.com/aramisdiaz" target="_blank" rel="noopener noreferrer"><img
+                                        src="./assets/images/github.jpg" alt="GithubADiaz2020"
+                                        class="img-fluid grow"></a>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns"
+                                data-aos="zoom-in">
+                                <a href="https://www.linkedin.com/in/aramis-diaz-b886aa60/" target="_blank"
+                                    rel="noopener noreferrer"><img src="./assets/images/linkedin.png"
+                                        alt="LinkedInADiaz2020" class="img-fluid grow"></a>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12 d-flex justify-content-center logo-btns"
+                                data-aos="fade-left">
+                                <a href="https://drive.google.com/file/d/1vR9TnRo3No8tZ_oKNMgoURM1LY-EDpyI/view?usp=sharing"
+                                    target="_blank" rel="noopener noreferrer"><img src="./assets/images/resume.png"
+                                        alt="ResumeADiaz2020" class="img-fluid grow"></a>
+
+                            </div>
+                        </div>
                     </div>
+
                 </div>
+
+
+
             </div>
 
-        </div>
 
-
-
-    </div>
-
-
-    <!-- Jquery needed -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <!-- animate on scroll library -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <!-- site js file link -->
-    <script src="assets/javascript/app.js"></script>
+            <!-- Jquery needed -->
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+            <!-- animate on scroll library -->
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
+            <!-- site js file link -->
+            <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
