--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 I am a full-stack web developer.
             </div>
 
-            <a class="navItem" href="#about-div" id="down-btn"><img alt="Click Me!" class="img-fluid grow"
+            <a class="navItem" href="#about-div" id="down-btn"><img alt="Click Me!" id="down-btn-icon" class="img-fluid grow"
                     src="./assets/images/downArrow.png"></a>
         </div>
     </section>
